MB-45899: Check result of find in Manifest::accumulateStats

A collection can be dropped during stat gathering allowing for
an invalid iterator to be accessed. We must check the result of
find, and skip accumulation if the iterator is invalid.

Change-Id: I27c7a34aed5032041953997348f43385f98f5579
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/152076
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>
Reviewed-by: Daniel Owen <owend@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>